[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/default.png" type="Texture" id=1]
[ext_resource path="res://src/Deer/Deer.gd" type="Script" id=2]
[ext_resource path="res://src/Mechanics/StateMachine/StateMachine.gd" type="Script" id=4]
[ext_resource path="res://src/Mechanics/StateMachine/IdleState.gd" type="Script" id=5]
[ext_resource path="res://src/Mechanics/StateMachine/FleeState.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 16.238
height = 9.98602

[sub_resource type="CircleShape2D" id=3]
radius = 439.477

[sub_resource type="CircleShape2D" id=4]
radius = 104.463

[node name="Deer" type="KinematicBody2D"]
collision_layer = 3090
collision_mask = 1043
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.045699, 0.0316537 )
frames = SubResource( 1 )
animation = "idle"
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.554779, 0.27739 )
rotation = 1.5708
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="FleeState" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="FleeTimer" type="Timer" parent="StateMachine"]
wait_time = 5.0
one_shot = true

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 3 )

[node name="ComfortArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ComfortArea"]
shape = SubResource( 4 )
[connection signal="timeout" from="StateMachine/FleeTimer" to="StateMachine/FleeState" method="_on_FleeTimer_timeout"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
[connection signal="body_entered" from="ComfortArea" to="." method="_on_ComfortArea_body_entered"]
[connection signal="body_exited" from="ComfortArea" to="." method="_on_ComfortArea_body_exited"]
